--- a/.github/workflows/build_ruby_gem.yml
+++ b/.github/workflows/build_ruby_gem.yml
@@ -23,4 +23,45 @@ jobs:
       run: |
         chmod +x ./generate.sh
         ./generate.sh
+
+    - name: Add & Commit
+      # You may pin to the exact commit or the version.
+      # uses: EndBug/add-and-commit@1bad3abcf0d6ec49a5857d124b0bfb52dc7bb081
+      uses: EndBug/add-and-commit@v9.1.3
+      with:
+        # The name of the user that will be displayed as the author of the commit
+        author_name: John Hebron via GitHub Action
+        # The email of the user that will be displayed as the author of the commit
+        author_email: johnhebron@gmail.com
+        # Additional arguments for the git commit command
+        # commit: # optional
+        # The name of the custom committer you want to use
+        committer_name: John Hebron via GitHub Action
+        # The email of the custom committer you want to use
+        committer_email: johnhebron@gmail.com
+        # The directory where your repository is located. You should use actions/checkout first to set it up
+        cwd: /
+        # How the action should fill missing author name or email.
+        # default_author: # optional, default is github_actor
+        # Arguments for the git fetch command (if 'false', the action won't fetch the repo)
+        # fetch: # optional, default is --tags --force
+        # The message for the commit
+        message: "Committing generated Gem files to repository"
+        # The name of the branch to create.
+        # new_branch: # optional
+        # The way the action should handle pathspec errors from the add and remove commands.
+        # pathspec_error_handling: # optional, default is ignore
+        # Arguments for the git pull command. By default, the action does not pull.
+        # pull: # optional
+        # Whether to push the commit and, if any, its tags to the repo. It can also be used to set the git push arguments (more info in the README)
+        # push: # optional, default is true
+        # Arguments for the git rm command
+        # remove: # optional
+        # Arguments for the git tag command (the tag name always needs to be the first word not preceded by a hyphen)
+        # tag: # optional
+        # Arguments for the git push --tags command (any additional argument will be added after --tags)
+        # tag_push: # optional
+        # The token used to make requests to the GitHub API. It's NOT used to make commits and should not be changed.
+        # github_token: # optional, default is ${{ github.token }}
+
         
