--- a/.github/workflows/build_ruby_gem.yml
+++ b/.github/workflows/build_ruby_gem.yml
@@ -17,12 +17,17 @@ jobs:
 
     - name: Install OpenAPI Generator CLI
       run: |
-        wget https://repo1.maven.org/maven2/org/openapitools/openapi-generator-cli/7.2.0/openapi-generator-cli-7.2.0.jar -O openapi-generator-cli.jar
+        mkdir ./tmp
+        wget https://repo1.maven.org/maven2/org/openapitools/openapi-generator-cli/7.2.0/openapi-generator-cli-7.2.0.jar -O ./tmp/openapi-generator-cli.jar
 
     - name: Run generate.sh script
       run: |
         chmod +x ./generate.sh
         ./generate.sh
+
+    - name: Delete tmp directory
+      run: |
+        rm -rf ./tmp
 
     - name: Add & Commit
       # You may pin to the exact commit or the version.
@@ -34,7 +39,7 @@ jobs:
         # The email of the user that will be displayed as the author of the commit
         author_email: johnhebron@gmail.com
         # Additional arguments for the git commit command
-        # commit: # optional
+        # commit: --all -- ':!*.gitignore'
         # The name of the custom committer you want to use
         committer_name: John Hebron via GitHub Action
         # The email of the custom committer you want to use
