--- a/.github/workflows/build_ruby_gem.yml
+++ b/.github/workflows/build_ruby_gem.yml
@@ -34,12 +34,14 @@ jobs:
       # uses: EndBug/add-and-commit@1bad3abcf0d6ec49a5857d124b0bfb52dc7bb081
       uses: EndBug/add-and-commit@v9.1.3
       with:
+         # Arguments for the git add command
+        add: -f # optional, default is .
         # The name of the user that will be displayed as the author of the commit
         author_name: John Hebron via GitHub Action
         # The email of the user that will be displayed as the author of the commit
         author_email: johnhebron@gmail.com
         # Additional arguments for the git commit command
-        commit: -f
+        # commit: -f
         # The name of the custom committer you want to use
         committer_name: John Hebron via GitHub Action
         # The email of the custom committer you want to use
